# MyAPI

./: .coverage  .env  Dockerfile  README.md  docker-compose.yml  env.example  main.py_bak  pyproject.toml  run.py  test-aliyun-deploy.md  test-commit.md  test-deploy.md  test-harbor.sh
.github/workflows/: ci-cd.yml  deploy.yml
app/: main.py
app/api/: api.py
app/api/v1/: api.py
app/api/v1/endpoints/: wechat.py
app/core/: config.py  exceptions.py
app/schemas/: wechat.py
app/services/: wechat_service.py
app/utils/: logger.py
docs/: docker-setup.md  github-actions-setup.md
scripts/: deploy.sh  setup-docker-permissions.sh  setup-docker-registry.sh
tests/: conftest.py  test_api.py  test_wechat_service.py
